--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,17 @@
 <div class="user">
   <h1>User info</h1>
+  <%= attachment_image_tag @user, :profile_image, format: 'jpeg', size: "100x100" %>
+  <table>
+    <tbody>
+      <tr>
+        <td>name</td><td><%= @user.name %></td>
+      </tr>
+      <tr>
+        <td>introduction</td><td><%= @user.introduction %></td>
+      </tr>
+    </tbody>
+  </table>
+  <%= link_to edit_user_path(@user) do %>Edit<% end %>
 </div>
 
 <div class="new-book">
