--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,8 @@
     <title>Bookers2</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -12,44 +13,70 @@
   <body>
     
     <header>
-      
-      <% if user_signed_in? %>
-        <ul>
-          <li>
-            <%= link_to user_path(current_user) do %>Home<% end %>
-          </li>
-          <li>
-            <%= link_to users_path do %>Users<% end %>
-          </li>
-          <li>
-            <%= link_to books_path do %>Books<% end %>
-          </li>
-          <li>
-            <%= link_to destroy_user_session_path, method: :delete do %>logout<% end %>
-          </li>
-      <% else %>
-          <li>
-            <%= link_to root_path do %>Home<% end %>
-          </li>
-          <li>
-            <%= link_to home_about_path do %>About<% end %>
-          </li>
-          <li>
-            <%= link_to new_user_registration_path do %>sign up<% end %>
-          </li>
-          <li>
-            <%= link_to new_user_session_path do %>login<% end %>
-          </li>
-      </ul>
-      <% end %>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <%= link_to(root_path, class: "navbar-brand") do %>Bookers<% end %>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></sapn>
+          </button>
+        
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+              <% if user_signed_in? %>
+                <li class="nav-item active">
+                  <%= link_to(user_path(current_user), class: "nav-link text-light mr-2") do %>Home<% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to(users_path, class: "nav-link text-light mr-2") do %>Users<% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to(books_path, class: "nav-link text-light mr-2") do %>Books<% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to(destroy_user_session_path, method: :delete, class: "nav-link text-light") do %>logout<% end %>
+                </li>
+              <% else %>
+                <li class="nav-item">
+                  <%= link_to(root_path, class: "nav-link text-light mr-2") do %>Home<% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to(home_about_path, class: "nav-link text-light mr-2") do %>About<% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to(new_user_registration_path, class: "nav-link text-light mr-2") do %>sign up<% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to(new_user_session_path, class: "nav-link text-light") do %>login<% end %>
+                </li>
+              <% end %>
+            </ul>
+          </div>
+        
+        </div>
+      </nav>
       
     </header>
-    
-    <div class="flash">
-      <% flash.each do |key, value| %>
-        <%= content_tag(:div, value, class: "#{key}") %>
-      <% end %>
+    <main>
+      <div class="flash">
+        <% flash.each do |key, value| %>
+          <%= content_tag(:div, value, class: "#{key}") %>
+        <% end %>
       </div>
-    <%= yield %>
+      <%= yield %>
+    </main>
+    
+    <footer>
+      <div class="container mt-5">
+        <div class="row">
+          <div class="mx-auto col-md-offset-3 col-md-6">
+            <p class="text-center">CopyRight Infratop.inc</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+    
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
   </body>
 </html>
