--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,10 @@
+<% if @user.errors.any? %>
+  <%= @user.errors.count %>prohibited this obj from being saved:
+  <%= @user.errors.full_messages.each do |message| %>
+  <%= message %>
+  <% end %>
+<% end %>
+
 <div class="user-edit">
   <h1>User info</h1>
   <%= form_with model: @user, local: true do |f| %>
