--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,3 +1,10 @@
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>prohibited this obj from being saved:
+  <%= @book.errors.full_messages.each do |message| %>
+  <%= message %>
+  <% end %>
+<% end %>
+
 <div class="book-edit">
   <h1>Editing Book</h1>
   
