--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,51 +1,75 @@
-<div class="user">
-  <h1>User info</h1>
-  <%= attachment_image_tag @user, :profile_image, format: 'jpeg', size: "100x100" %>
-  <table>
-    <tbody>
-      <tr>
-        <td>name</td><td><%= @user.name %></td>
-      </tr>
-      <tr>
-        <td>introduction</td><td><%= @user.introduction %></td>
-      </tr>
-    </tbody>
-  </table>
-  <%= link_to edit_user_path(@user) do %>Edit<% end %>
-</div>
+<div class="container">
 
-<div class="new-book">
-  <h1>New book</h1>
-  <%= form_with model:@book, local: true do |f| %>
-    <p>Title</p>
-    <%= f.text_field :title %>
-    
-    <p>Opinion</p>
-    <%= f.text_area :body %>
-    <%= f.submit 'Create Book' %>
-  <% end %>
-</div>
-
-<div class="books">
-  <h1>Books</h1>
-    <table>
-      <thead>
-        <tr>
-          <th></th>
-          <th>Title</th>
-          <th>Opinion</th>
-        </tr>
-      </thead>
+  <div class="errors danger">
+    <% if @book.errors.any? %>
+      <%= @book.errors.count %>prohibited this obj from being saved:
+      <%= @book.errors.full_messages.each do |message| %>
+      <%= message %>
+      <% end %>
+    <% end %>
+  </div>
+        
+    <div class="row">
       
-    
-      <tbody>
-        <% @books.each do |book| %>
-          <tr>
-            <td></td>
-            <td><%= link_to book_path(book.id) do %><%= book.title %><% end %></td>
-            <td><%= book.body %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
+      <div class="col-md-3">
+        <div class="user">
+          <h1>User info</h1>
+          <%= attachment_image_tag @user, :profile_image, format: 'jpeg', size: "100x100" %>
+          <table class="table mt-3">
+            <tbody>
+              <tr>
+                <th>name</th><th><%= @user.name %></th>
+              </tr>
+              <tr>
+                <th>introduction</th><th><%= @user.introduction %></th>
+              </tr>
+            </tbody>
+          </table>
+          <%= link_to(edit_user_path(@user), class: "btn btn-outline-secondary btn-block text-dark") do %>Edit<% end %>
+        </div>
+
+        <div class="new-book">
+          <h1>New book</h1>
+          <%= form_with model:@book, local: true do |f| %>
+            <div class="field">
+              <%= f.label "Title" %><br />
+              <%= f.text_field :title %>
+            </div>
+            
+            <div class="field mt-3 ">
+              <%= f.label "Opinion" %><br />
+              <%= f.text_area :body %>
+              <%= f.submit 'Create Book', class: "btn btn-success mt-3" %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+      
+      <div class="mx-auto col-md-offset-1 col-md-8">
+        <div class="books">
+          <h1>Books</h1>
+            <table class="table table-hover">
+              <thead>
+                <tr>
+                  <th></th>
+                  <th>Title</th>
+                  <th>Opinion</th>
+                </tr>
+              </thead>
+      
+              <tbody>
+                <% @books.each do |book| %>
+                  <tr>
+                    <td><%= link_to user_path(book.user_id) do %><%= attachment_image_tag book.user, :profile_image, size: "50x50" %><% end %></td>
+                    <td><%= link_to book_path(book.id) do %><%= book.title %><% end %></td>
+                    <td><%= book.body %></td>
+                  </tr>
+                <% end %>
+              </tbody>
+            </table>
+            <%= paginate @books %>
+        </div>
+      </div>
+      
+    </div>
 </div>
