--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,44 +1,57 @@
-<div class="user">
-  <h1>User info</h1>
-  <%= attachment_image_tag @user, :profile_image, format: 'jpeg', size: "100x100" %>
-  <table>
-    <tbody>
-      <tr>
-        <td>name</td><td><%= @user.name %></td>
-      </tr>
-      <tr>
-        <td>introduction</td><td><%= @user.introduction %></td>
-      </tr>
-    </tbody>
-  </table>
-  <%= link_to edit_user_path(@user) do %>Edit<% end %>
-</div>
+<div class="container">
+  <div class="row">
+    
+    <div class="col-md-3">
+      <div class="user">
+        <h1>User info</h1>
+        <%= attachment_image_tag @user, :profile_image, format: 'jpeg', size: "100x100" %>
+        <table class="table mt-3">
+          <tbody>
+            <tr>
+              <td>name</td><td><%= @user.name %></td>
+            </tr>
+            <tr>
+              <td>introduction</td><td><%= @user.introduction %></td>
+            </tr>
+          </tbody>
+        </table>
+        <%= link_to(edit_user_path(@user), class: "btn btn-outline-secondary btn-block text-dark") do %>Edit<% end %>
+      </div>
 
-<div class="new-book">
-  <h1>New book</h1>
-  <%= form_with model:@books, local: true do |f| %>
-    <p>Title</p>
-    <%= f.text_field :title %>
+      <div class="new-book">
+        <h1>New book</h1>
+        <%= form_with model:@books, local: true do |f| %>
+          <div class="field">
+            <%= f.label "Title" %><br />
+            <%= f.text_field :title %>
+          </div>
 
-    <p>Opinion</p>
-    <%= f.text_area :body %>
-    <%= f.submit 'Create Book' %>
-  <% end %>
-</div>
+          <div class="field mt-3">
+            <%= f.label "Opinion" %><br />
+            <%= f.text_area :body %>
+            <%= f.submit 'Create Book', class: "btn btn-success mt-3" %>
+          </div>
+        <% end %>
+      </div>
+    </div>
 
-<div class="books">
-  <h1>Book detail</h1>
-    <table>
-      <tbody>
-          <tr>
-            <td>name</td>
-            <td><%= link_to book_path(@book) do %><%= @book.title %><% end %></td>
-            <td><%= @book.body %></td>
-            <% if @user == current_user %>
-            <td><%= link_to edit_book_path(@book) do %>Edit<% end %></td>
-            <td><%= link_to book_path(@book), method: :delete do %>Destroy<% end %></td>
-            <% end %>
-          </tr>
-      </tbody>
-    </table>
+    <div class="mx-auto col-md-offset-i col-md-8">
+      <div class="books">
+        <h1>Book detail</h1>
+         <table class="table table-hover">
+            <tbody>
+                <tr>
+                  <td><%= link_to user_path(@user) do %><%= attachment_image_tag @user, :profile_image, size: "50x50" %><br /><%= @user.name %><% end %></td>
+                  <td><%= link_to book_path(@book) do %><%= @book.title %><% end %></td>
+                  <td><%= @book.body %></td>
+                  <% if @user == current_user %>
+                  <td><%= link_to edit_book_path(@book) do %>Edit<% end %></td>
+                  <td><%= link_to book_path(@book), method: :delete, data: {confirm:"Are you sure?"} do %>Destroy<% end %></td>
+                  <% end %>
+                </tr>
+            </tbody>
+          </table>
+      </div>
+      
+  </div>
 </div>
