--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,1 +1,7 @@
-<h1>Welcome to <strong>Bookers!</strong></h1>
+<div class="container">
+  <div class="row">
+    <div class="mx-auto col-md-offset-3 col-md-6">
+      <h1 class="text-center">Welcome to<strong>Bookers!</strong></h1>
+    </div>
+  </div>
+</div>
