--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,51 +1,65 @@
-<div class="user">
-  <h1>User info</h1>
-  <%= attachment_image_tag @user, :profile_image, format: 'jpeg', size: "100x100" %>
-  <table>
-    <tbody>
-      <tr>
-        <td>name</td><td><%= @user.name %></td>
-      </tr>
-      <tr>
-        <td>introduction</td><td><%= @user.introduction %></td>
-      </tr>
-    </tbody>
-  </table>
-  <%= link_to edit_user_path(@user) do %>Edit<% end %>
-</div>
-
-<div class="new-book">
-  <h1>New book</h1>
-  <%= form_with model:@book, local: true do |f| %>
-    <p>Title</p>
-    <%= f.text_field :title %>
+<div class="container">
+  <div class="row">
     
-    <p>Opinion</p>
-    <%= f.text_area :body %>
-    <%= f.submit 'Create Book' %>
-  <% end %>
-</div>
+    <div class="col-md-3">
+      <div class="user">
+        <h1>User info</h1>
+        <%= attachment_image_tag @user, :profile_image, format: 'jpeg', size: "100x100" %>
+        <table class="table mt-3">
+          <tbody>
+            <tr>
+              <td>name</td><td><%= @user.name %></td>
+            </tr>
+            <tr>
+              <td>introduction</td><td><%= @user.introduction %></td>
+            </tr>
+          </tbody>
+        </table>
+        <%= link_to(edit_user_path(@user), class: "btn btn-outline-secondary btn-block text-dark") do %>Edit<% end %>
+      </div>
 
-<div class="books">
-  <h1>Books</h1>
-    <table>
-      <thead>
-        <tr>
-          <th>image</th>
-          <th>name</th>
-          <th></th>
-        </tr>
-      </thead>
-      
+      <div class="new-book">
+        <h1>New book</h1>
+        <%= form_with model:@book, local: true do |f| %>
+          <div class="field">
+            <%= f.label "Title" %><br />
+            <%= f.text_field :title %>
+          </div>
     
-      <tbody>
-        <% @users.each do |user| %>
-          <tr>
-            <td>Image</td>
-            <td><%= user.name %></td>
-            <td><%= link_to user_path(user.id) do %>Show<% end %></td>
-          </tr>
+          <div class="field mt-3">
+            <%= f.label "Opinion" %><br />
+            <%= f.text_area :body %>
+            <%= f.submit 'Create Book', class: "btn btn-success mt-3" %>
+          </div>
         <% end %>
-      </tbody>
-    </table>
+      </div>
+    </div>
+
+    <div class="mx-auto col-md-offset-1 col-md-8">
+      <div class="books">
+        <h1>Books</h1>
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th>image</th>
+                <th>name</th>
+                <th></th>
+              </tr>
+            </thead>
+      
+            <tbody>
+              <% @users.each do |user| %>
+                <tr>
+                  <td><%= attachment_image_tag user, :profile_image, size: "50x50" %></td>
+                  <td><%= user.name %></td>
+                  <td><%= link_to user_path(user.id) do %>Show<% end %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        <%= paginate @users %>
+      </div>
+    </div>
+      
+  </div>
 </div>
