--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -12,38 +12,9 @@
     <div class="row">
       
       <div class="col-md-3">
-        <div class="user">
-          <h1>User info</h1>
-          <%= attachment_image_tag @user, :profile_image, format: 'jpeg', size: "100x100" %>
-          <table class="table mt-3">
-            <tbody>
-              <tr>
-                <th>name</th><th><%= @user.name %></th>
-              </tr>
-              <tr>
-                <th>introduction</th><th><%= @user.introduction %></th>
-              </tr>
-            </tbody>
-          </table>
-          <%= link_to(edit_user_path(@user), class: "btn btn-outline-secondary btn-block text-dark") do %>Edit<% end %>
-        </div>
-
-        <div class="new-book">
-          <h1>New book</h1>
-          <%= form_with model:@book, local: true do |f| %>
-            <div class="field">
-              <%= f.label "Title" %><br />
-              <%= f.text_field :title %>
-            </div>
-            
-            <div class="field mt-3 ">
-              <%= f.label "Opinion" %><br />
-              <%= f.text_area :body %>
-              <%= f.submit 'Create Book', class: "btn btn-success mt-3" %>
-            </div>
-          <% end %>
-        </div>
+        <%= render 'books/list', book: @book, user: @user %>
       </div>
+      
       
       <div class="mx-auto col-md-offset-1 col-md-8">
         <div class="books">
@@ -51,18 +22,27 @@
             <table class="table table-hover">
               <thead>
                 <tr>
-                  <th></th>
+                  <th>favorite</th>
                   <th>Title</th>
                   <th>Opinion</th>
+                  <th>content</th>
+                  <th>comment</th>
                 </tr>
               </thead>
       
               <tbody>
                 <% @books.each do |book| %>
                   <tr>
+                    <% if book.favorited_by?(current_user) %>
+                      <td><%= link_to book_favorites_path(book), method: :delete do %>❤<%= book.favorites.count %>いいね<% end %></td>
+                    <% else %>
+                      <td><%= link_to book_favorites_path(book), method: :post do %>♡<%= book.favorites.count %>いいね<% end %></td>
+                    <% end %>
+                    
                     <td><%= link_to user_path(book.user_id) do %><%= attachment_image_tag book.user, :profile_image, size: "50x50" %><% end %></td>
                     <td><%= link_to book_path(book.id) do %><%= book.title %><% end %></td>
                     <td><%= book.body %></td>
+                    <td><%= link_to "#{book.book_comments.count}コメント", book_path(book.id) %></td>
                   </tr>
                 <% end %>
               </tbody>
