--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,23 +1,41 @@
-<% if @user.errors.any? %>
-  <%= @user.errors.count %>prohibited this obj from being saved:
-  <%= @user.errors.full_messages.each do |message| %>
-  <%= message %>
-  <% end %>
-<% end %>
+<div class="container">
+  
+  <div class="row">
+    <div class="col-md-10">
 
-<div class="user-edit">
-  <h1>User info</h1>
-  <%= form_with model: @user, local: true do |f| %>
+      <div class="user-edit">
+        <h1>User info</h1>
+        
+        <div class="errors text-danger">
+          <% if @user.errors.any? %>
+            <strong><%= @user.errors.count %>prohibited this obj from being saved:</strong>
+            <%= @user.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+            <% end %>
+          <% end %>
+        </div>
+        
+        <%= form_with model: @user, local: true do |f| %>
   
-  <p>Name</p><br />
-  <%= f.text_field :name %>
+        <div class="field">
+          <%= f.label "Name" %><br />
+          <%= f.text_field :name %>
+        </div>
   
-  <p>Image</p><br />
-  <%= f.attachment_field :profile_image %>
+        <div class="field mt-3 mb-3">
+          <%= f.label "Image" %><br />
+          <%= f.attachment_field :profile_image %>
+        </div>
   
-  <p>Introduction</p><br />
-  <%= f.text_area :introduction %><br />
-  <%= f.submit "Update User" %>
+        <div class="field">
+          <%= f.label "Introduction" %><br />
+          <%= f.text_area :introduction %><br />
+          <%= f.submit "Update User", class: "btn btn-success mt-3" %>
+        </div>
   
-  <% end %>
+        <% end %>
+      </div>
+        
+    </div>
   </div>
+</div>
