--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,37 +2,7 @@
   <div class="row">
     
     <div class="col-md-3">
-      <div class="user">
-        <h1>User info</h1>
-        <%= attachment_image_tag @user, :profile_image, format: 'jpeg', size: "100x100" %>
-        <table class="table mt-3">
-          <tbody>
-            <tr>
-              <td>name</td><td><%= @user.name %></td>
-            </tr>
-            <tr>
-              <td>introduction</td><td><%= @user.introduction %></td>
-            </tr>
-          </tbody>
-        </table>
-        <%= link_to(edit_user_path(@user), class: "btn btn-outline-secondary btn-block text-dark") do %>Edit<% end %>
-      </div>
-
-      <div class="new-book">
-        <h1>New book</h1>
-        <%= form_with model:@book, local: true do |f| %>
-          <div class="field">
-            <%= f.label "Title" %><br />
-            <%= f.text_field :title %>
-          </div>
-    
-          <div class="field mt-3">
-            <%= f.label "Opinion" %><br />
-            <%= f.text_area :body %>
-            <%= f.submit 'Create Book', class: "btn btn-success mt-3" %>
-          </div>
-        <% end %>
-      </div>
+      <%= render 'books/list', book: @book, user: @user %>
     </div>
 
     <div class="mx-auto col-md-offset-1 col-md-8">
