--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,37 +2,7 @@
   <div class="row">
     
     <div class="col-md-3">
-      <div class="user">
-        <h1>User info</h1>
-        <%= attachment_image_tag @user, :profile_image, format: 'jpeg', size: "100x100" %>
-        <table class="table mt-3">
-          <tbody>
-            <tr>
-             <td>name</td><td><%= @user.name %></td>
-            </tr>
-            <tr>
-              <td>introduction</td><td><%= @user.introduction %></td>
-            </tr>
-          </tbody>
-        </table>
-          <%= link_to(edit_user_path(@user), class: "btn btn-outline-secondary btn-block text-dark") do %>Edit<% end %>
-      </div>
-
-      <div class="new-book">
-        <h1>New book</h1>
-        <%= form_with model:@book, local: true do |f| %>
-          <div class="field">
-            <%= f.label "Title" %><br />
-            <%= f.text_field :title %>
-          </div>
-          
-          <div class="field mt-3">
-            <%= f.label "Opinion" %><br />
-            <%= f.text_area :body %>
-            <%= f.submit 'Create Book', class: "btn btn-success mt-3" %>
-          </div>
-        <% end %>
-      </div>
+      <%= render 'books/list', book: @book, user: @user %>
     </div>
 
     <div class="mx-auto col-md-offset-1 col-md-8">
@@ -41,18 +11,22 @@
           <table class="table table-hover">
             <thead>
               <tr>
-                <th></th>
+                <th>Favorite</th>
+                <th>User</th>
                 <th>Title</th>
                 <th>Opinion</th>
+                <th>Comment</th>
               </tr>
             </thead>
       
             <tbody>
               <% @books.each do |book| %>
                 <tr>
+                  <td>❤<%= book.favorites.count %>いいね</td>
                   <td><%= link_to user_path(book.user_id) do %><%= attachment_image_tag book.user, :profile_image, size: "50x50" %><% end %></td>
                   <td><%= link_to book_path(book.id) do %><%= book.title %><% end %></td>
                   <td><%= book.body %></td>
+                  <td><%= book.book_comments.count %>コメント</td>
                 </tr>
               <% end %>
             </tbody>
